# flux-framework-tutorials

./: .gitignore  .gitmodules
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/: CMakeLists.txt  README.md  config.py  requirements.txt  spack.yaml
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/cmake/: FindFilesystem.cmake
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/configure_helpers/: build.py  dtl.py  general.py
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/dtl/: CMakeLists.txt
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/dtl/benchmark_dtl/: benchmark_reader.cpp  benchmark_reader.hpp  benchmark_writer.cpp  benchmark_writer.hpp
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/dtl/dspaces/: CMakeLists.txt  dspaces_reader.cpp  dspaces_reader.hpp  dspaces_writer.cpp  dspaces_writer.hpp
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/dtl/dtl_headers/: CMakeLists.txt  dtl_reader.hpp.in  dtl_writer.hpp.in
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/dtl/dyad/: .nfs804502b80255df0f00037f5d  CMakeLists.txt  dtl_defines.hpp.in  dyad_reader.cpp  dyad_reader.hpp  dyad_writer.cpp  dyad_writer.hpp
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/dtl/template/: CMakeLists.txt  template_reader.cpp  template_reader.hpp  template_writer.cpp  template_writer.hpp
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/script/: compute.py
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/src/: CMakeLists.txt  balanced_consumer.cpp  balanced_producer.cpp  calc_chunk_size.cpp  calc_natoms.cpp
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/basic_seq/: basic_lassen_launch.sh  basic_slurm_launch.sh  driver.py  lassen.toml  run_pipeline.sh  test.toml
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/basic_seq/basic_seq_driver/: config.py
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/basic_seq/basic_seq_driver/dtl_plugins/: __init__.py  dyad.py  plugin_base.py
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/basic_seq/basic_seq_driver/utils/: lassen_dyad_wrapper.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/basic_seq/catalyst/data_size_scaling/: collect_makespan_csv.sh  data_size_10240_atoms.toml  data_size_10485760_atoms.toml  data_size_1280_atoms.toml  data_size_1310720_atoms.toml  data_size_160_atoms.toml  data_size_163840_atoms.toml  data_size_20480_atoms.toml  data_size_20971520_atoms.toml  data_size_2560_atoms.toml  data_size_2621440_atoms.toml  data_size_320_atoms.toml  data_size_327680_atoms.toml  data_size_40960_atoms.toml  data_size_40_atoms.toml  data_size_5120_atoms.toml  data_size_5242880_atoms.toml  data_size_640_atoms.toml  data_size_655360_atoms.toml  data_size_80_atoms.toml  data_size_81920_atoms.toml  launch_slurm.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/orig_submit/point2point/dspaces/: dspaces.sh  dtl_shutdown.sh  dtl_startup.sh  launch_lassen.sh  launch_lsf.sh  launch_slurm.sh  run_cons.sh  run_prod.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/orig_submit/point2point/dyad/: dtl_shutdown.sh  dtl_startup.sh  dyad.sh  launch_lassen.sh  launch_slurm.sh  run_cons.sh  run_prod.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/orig_submit/point2point/dyad_test_catalyst/: dtl_startup.sh  dyad.sh  launch_flux.sh  launch_lassen.sh  launch_lsf.sh  launch_slurm.sh  nsteps_scaling_timings.csv  run_cons.sh  run_prod.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/orig_submit/point2point/dyad_test_corona/: corona175-pipeline1_consu-216081.core  corona178-pipeline1_produ-215747.core  dtl_shutdown.sh  dyad.sh  dyad_benchmark_test_p1.err  dyad_benchmark_test_p1.out  flux_core_dump.txt  interactive_job_args.sh  launch_flux.sh  launch_slurm.sh  ucs_dump.txt
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/orig_submit/point2point/dyad_test_lassen/: dtl_startup.sh  dyad.sh  dyad_benchmark_test_p1.err  dyad_benchmark_test_p1.out  interactive_job_args.sh  launch_slurm.sh  run_cons.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/submit/orig_submit/point2point/templates/: dtl_shutdown.sh  dtl_startup.sh  launch_lassen.sh  launch_lsf.sh  launch_slurm.sh  run_cons.sh  run_prod.sh  tool.sh
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/: CMakeLists.txt
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  CodingConventions.md  Dockerfile  Dockerfile.build  README.md  TargetSystemList.txt  build_container.sh  environment.yaml  setup.py  shippable.yaml
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/a4md/: analyzer.cxx  generator.cxx  test_consumer.cxx  test_producer.cxx
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/a4md/common/: CMakeLists.txt  chunk.cxx  chunk.h  chunk_operator.cxx  chunk_operator.h  chunk_reader.cxx  chunk_reader.h  chunk_serializer.cxx  chunk_stager.cxx  chunk_stager.h  chunk_writer.cxx  chunk_writer.h  chunks.h  cv_chunk.h  cv_runner.cxx  cv_runner.h  md_chunk.h  md_intermediator.cxx  md_intermediator.h  md_runner.cxx  md_runner.h  py_caller.cxx  (+5 more)
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/cmake/: FindCRAY.cmake  FindDataSpaces.cmake  FindNumPy.cmake
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/config/: CMakeLists.txt  a4md_config.in
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/examples/: CMakeLists.txt  data_extraction.py  plot_analysis_time.ipynb  plot_ete_time.ipynb  plot_sim_time.ipynb  plot_vary_dump_time.ipynb  plot_varying_L.ipynb
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/tests/: CMakeLists.txt  base_test.py  test_cv.py  test_serialization.cxx
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/subprojects/a4md/wrap/: CMakeLists.txt  mpmd.w
2023-Dev-Day/JupyterNotebook/Src_Benchmark_InSitu/system_configs/: catalyst.toml  catalyst_benchmark.cmake  corona.toml  corona_benchmark.cmake  dspaces_and_dyad.toml  lassen.toml  lassen_benchmark.cmake  tioga.toml  tioga_benchmark.cmake
(+169 files in other folders)
