# Add subdirectories
add_subdirectory(common)
add_subdirectory(dtl)
add_subdirectory(ingest)
add_subdirectory(retrieve)
add_subdirectory(extern)

# Define executables
# add_executable(ingester ingester.cxx)
# add_executable(retriever retriever.cxx)
#add_executable(mdgenerator mdgenerator.cxx)
add_executable(generator generator.cxx)
add_executable(analyzer analyzer.cxx)
add_executable(test_producer test_producer.cxx)
add_executable(test_consumer test_consumer.cxx)

# target_link_libraries(ingester ingest a4md_cmn ${Boost_LIBRARIES} ${TAU_LIBRARIES})
# target_link_libraries(retriever retrieve a4md_cmn ${Boost_LIBRARIES} ${TAU_LIBRARIES})
#target_link_libraries(mdgenerator ingest a4md_cmn ${Boost_LIBRARIES} ${TAU_LIBRARIES})
target_link_libraries(generator a4md_cmn a4md_dtl a4md_ingest ${Boost_LIBRARIES} ${TAU_LIBRARIES})
target_link_libraries(analyzer a4md_cmn a4md_dtl a4md_retrieve ${Boost_LIBRARIES} ${TAU_LIBRARIES})
target_link_libraries(test_producer a4md_cmn a4md_dtl a4md_ingest ${Boost_LIBRARIES} ${TAU_LIBRARIES})
target_link_libraries(test_consumer a4md_cmn a4md_dtl a4md_retrieve ${Boost_LIBRARIES} ${TAU_LIBRARIES})

## Install executables
# install (TARGETS ingester DESTINATION bin)
# install (TARGETS retriever DESTINATION bin)
#install (TARGETS mdgenerator DESTINATION bin)
install (TARGETS generator DESTINATION bin)
install (TARGETS analyzer DESTINATION bin)
install (TARGETS test_producer DESTINATION bin)
install (TARGETS test_consumer DESTINATION bin)

if (dtl_decaf)
	add_executable(generator_decaf generator_decaf.cxx)
	add_executable(analyzer_decaf analyzer_decaf.cxx)
	target_link_libraries(generator_decaf a4md_cmn a4md_dtl a4md_ingest ${Boost_LIBRARIES} ${TAU_LIBRARIES})
	target_link_libraries(analyzer_decaf a4md_cmn a4md_dtl a4md_retrieve ${Boost_LIBRARIES} ${TAU_LIBRARIES})
	install (TARGETS generator_decaf DESTINATION bin)
	install (TARGETS analyzer_decaf DESTINATION bin)
endif()

add_subdirectory(${PROJECT_SOURCE_DIR}/src/a4md/extern/catch2)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/src/a4md/extern/catch2/contrib" ${CMAKE_MODULE_PATH})
add_executable(tests-main tests-main.cpp test-ingest.cpp)
target_link_libraries(tests-main Catch2::Catch2)
enable_testing()
include(CTest)
include(ParseAndAddCatchTests)
ParseAndAddCatchTests(tests-main)
